# nonebot_plugin_friends

./: .pre-commit-config.yaml  README.md  pyproject.toml
nonebot_plugin_friends/: __init__.py  config.py  event.py  matcher.py  rule.py  utils.py
